# exploratory-data-analysis-advaitparab

./: Pipfile  README.md  notebook.ipynb  notebook.py  pyproject.toml  requirements.txt
data/auto-mpg/: auto-mpg.data
