[tool.poetry]
name = "eda-lab"
version = "0.1.0"
description = ""
authors = ["Yahya Gilany <yahya.gilany@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.25.2"
notebook = "^7.0.4"
numpy = "^1.25.2"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.0"
plotly = "^5.16.1"
seaborn = "^0.12.2"
ipywidgets = "^8.1.1"
scipy = {version = "^1.11.3", python = "<3.13,>=3.9"}




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
